# fake-gps

./: CMakeLists.txt  README.md  main.cpp
cmd/: gps.sh  start.sh  twist.sh  xm.sh  xp.sh
